[package]
name = "data-gate"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
polars = { version = "0.51.0", features = ["lazy", "csv", "parquet"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
